--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
+   
+
 </head>
 <body>
 
@@ -14,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="four columns">
-                    <h1><img src="img/logo.png" alt="">Burger</h1>
+                    <h1><img src="img/logo.png" alt="">Hamburguesa</h1>
                 </div>
                 <div class="two columns u-pull-right">
                     <ul>
@@ -22,7 +24,7 @@
                             <img src="img/cart.png" alt="">
                             <div id="carrito">
                                 <p class="vacio">carrito vacio</p>
-                                <table class="u-full-width">
+                                <table id="lista-carrito" class="u-full-width">
                                     <thead>
                                         <tr>
                                             <th>Imagen</th>
@@ -31,25 +33,10 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>
-                                                <img src="img/platillo1.jpg" width="100">
-                                            </td>
-                                            <td>Hamburguesa con helado</td>
-                                            <td>$15</td>
-                                            <td><a href="#" class="borrar-platillo" >X</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <img src="img/platillo3.jpg" width="100">
-                                            </td>
-                                            <td>Hamburguesa sencilla</td>
-                                            <td>$15</td>
-                                            <td><a href="#" class="borrar-platillo" >X</a></td>
-                                        </tr>
+                                        
                                     </tbody>
                                 </table>
-                                <a href="#" class="button u-full-width">vaciar carrito</a>
+                                <a href="#" id="vaciar-carrito" class="button u-full-width">vaciar carrito</a>
                             </div>
                         </li>
                     </ul>
@@ -96,7 +83,7 @@
 
 
 
-    <div class="lista-platillos" class="container">
+    <div id="lista-platillos" class="container">
         <h1 class="encabezado">Pedidos en Linea</h1>
 
         <div class="row">
@@ -120,7 +107,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +119,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +134,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -159,7 +146,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -171,7 +158,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -186,7 +173,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="7">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -198,7 +185,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="8">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -210,7 +197,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="9">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -225,7 +212,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="10">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -237,7 +224,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="11">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -249,7 +236,7 @@
                         <p>Bebida ilimitada</p>
                         <img src="img/estrellas.png">
                         <p class="precio">$50 <span class="u-pull-right">$15</span> </p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="12">Agregar al carrito</a>
                     </div>
                 </div>
             </div>
@@ -282,6 +269,6 @@
         </div>
     </footer>
 
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
